<resources>
    <string name="app_name" translatable="false">Podcast Time</string>
    <string name="home" translatable="false">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="subscription">Subscription</string>
    <string name="episode_title">Episode</string>
    <string name="episode_author">Author</string>
    <string name="episode_topic">Topic</string>
    <string name="back_arrow_icon_desc" translatable="false">back arrow icon</string>
    <string name="_1_0x" translatable="false">1.0x</string>
    <string name="multi_line_text" translatable="false">Description of episode Learn English 1 Description of episode Learn English 1 Description of episode Learn English 1 Description of episode Learn English 1 Description of episode Learn English 1 Description of episode Learn English 1 Description of episode Learn English 1 Description of episode Learn English 1</string>
    <string name="Library">Library</string>
    <string name="history">History</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome">Welcome</string>
    <string name="icon_for_change_user_image" translatable="false">icon for change user image</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="dark">Dark</string>
    <string name="email">your email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="_track_name" translatable="false">How to LEARN VOCABULARY | English</string>
    <string name="_episode_date" translatable="false">May 06, 2023</string>
    <string name="_episode_time" translatable="false">30 min</string>
    <string name="_collection_name" translatable="false">Effortless English Podcast | Learn English with AJ Hoge</string>
    <string name="subscribe">Subscribe</string>
    <string name="_user_name">User Name</string>
    <string name="_genre_name">Language Learning</string>
    <string name="_episodes_count">59 Episodes</string>
    <string name="podcast_title">Podcast</string>


    <!-- Notificaiton Channel -->
    <string name="notification_channel" translatable="false">Now Playing</string>
    <string name="notification_channel_description" translatable="false">Shows what music is currently playing in our App</string>

    <!-- Notification actions -->
    <string name="notification_skip_to_previous" translatable="false">Skip to previous track</string>
    <string name="notification_skip_to_next" translatable="false">Skip to next track</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>

    <!-- Error messages -->
    <string name="error_media_not_found">Could not locate requested media.</string>
    <string name="generic_error">Click again to Refresh!</string>

    <string name="subscription_completed">Subscription Completed</string>
    <string name="about_welcome_text">Welcome to the Podcast Time App! This app is powered by a podcast API that lets you explore and discover your favorite podcasts.</string>
    <string name="version_no" translatable="false">1.0.0</string>
    <string name="developer" translatable="false">Wael Shamardn</string>
    <string name="dev_email" translatable="false">wael_shamardn@outlook.com</string>
    <string name="dev_phone" translatable="false">01003527268</string>
    <string name="retry">Retry</string>
    <string name="oops">oops</string>
    <string name="trackCount">%1$s Episodes</string>
    <string name="welcome_to_podcast_time">Welcome to Podcast Time</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">forget password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="have_a_problem">Have a problem?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logout">Log out</string>

    // notifications
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notifications_permission_granted">Notifications permission granted</string>
    <string name="fcm_can_t_post_notifications_without_post_notifications_permission">FCM can\'t post notifications without POST_NOTIFICATIONS permission</string>
    <string name="title">Title</string>
    <string name="message">notification message</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_txt">Delete all records?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_podcast_confirmation_txt">"You gonna delete this podcast! Are you sure? "</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="sign_in_failed">Sign in failed, please try again later!!</string>
    <string name="generic_err_msg">Error: Please Try Again Later!!</string>
    <string name="register_welcome_msg">Let\'s Get Started</string>
    <string name="register_to_continue">Create a New Account!</string>
    <string name="full_name">full name</string>
    <string name="password_again">password Again</string>
    <string name="signup">Sign Up</string>
    <string name="have_an_account">Have an Account</string>
    <string name="forget_password_msg">Enter your Email to send you an email to update your Password.</string>
    <string name="send">Send</string>
    <string name="playlists">Playlists</string>
    <string name="_new">New</string>
    <string name="explore_recent_podcast">Recent Podcast</string>
    <string name="explore_favourite_episodes">Favourite Episodes</string>
    <string name="more">more ></string>
</resources>