<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:elevation="@dimen/space2x"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/space8x"
        android:paddingVertical="@dimen/space4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_about_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_shape"
            android:contentDescription="@string/back_arrow_icon_desc"
            android:padding="@dimen/space4x"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/primary" />

        <TextView
            android:id="@+id/text_about_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space8x"
            android:layout_marginStart="@dimen/space8x"
            android:text="@string/about"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/primary" />

    </LinearLayout>

    <View
        android:id="@+id/view_custom_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space2x"
        android:background="@drawable/gradiant_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space8x"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_custom_shadow" />

    <TextView
        android:id="@+id/text_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space8x"
        android:text="@string/about_welcome_text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space8x"
        android:layout_marginTop="16dp"
        android:text="@string/version_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_about" />

    <TextView
        android:id="@+id/text_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space8x"
        android:layout_marginTop="8dp"
        android:text="@string/developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_version" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space8x"
        android:layout_marginTop="8dp"
        android:text="@string/dev_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dev" />

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space8x"
        android:text="@string/dev_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />


</androidx.constraintlayout.widget.ConstraintLayout>