<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.shamardn.podcasttime.ui.auth.viewmodel.ForgetPasswordViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space8x">

        <!-- Drag handle for accessibility -->
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_forget_password_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space4x"
            android:text="@string/forget_password"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drag_handle" />

        <TextView
            android:id="@+id/text_forget_password_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_msg"
            android:textColor="@color/on_surface_variant"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forget_password_welcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_forget_password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            android:textColorHint="@color/hint_color"
            android:layout_marginTop="@dimen/space8x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forget_password_msg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_forget_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/space4x"
                android:hint="@string/email"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space16x"
            android:background="@drawable/btn_background"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.sendUpdatePasswordEmail()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_forget_password_input_layout" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>