<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Circular image with email -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile_user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        tools:srcCompat="@tools:sample/avatars" />


    <ImageView
        android:id="@+id/img_profile_change_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space2x"
        android:contentDescription="@string/icon_for_change_user_image"
        android:layout_marginBottom="@dimen/space2x"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_user_image"
        app:layout_constraintEnd_toEndOf="@+id/img_profile_user_image" />

    <TextView
        android:id="@+id/text_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="user@example.com"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/img_profile_user_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/img_profile_user_image"
        app:layout_constraintTop_toBottomOf="@id/img_profile_user_image"/>

    <TextView
        android:id="@+id/text_profile_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profile_email"/>

    <TextView
        android:id="@+id/text_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space4x"
        tools:text="User Name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profile_welcome"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_subscriptions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space24x"
        android:layout_marginTop="@dimen/space8x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/space8x"
        app:cardCornerRadius="@dimen/space8x"
        app:layout_constraintTop_toBottomOf="@id/text_profile_user_name">

        <TextView
            android:id="@+id/text_profile_subscriptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/space8x"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/space8x"
            android:paddingEnd="@dimen/space8x"
            android:text="@string/subscriptions"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_forward"
            app:drawableStartCompat="@drawable/ic_subscriptions" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_downloads"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space24x"
        android:layout_marginTop="@dimen/space8x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/space8x"
        app:cardCornerRadius="@dimen/space8x"
        app:layout_constraintTop_toBottomOf="@id/card_profile_subscriptions">

        <TextView
            android:id="@+id/text_profile_downloads"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/space8x"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/space8x"
            android:paddingEnd="@dimen/space8x"
            android:text="@string/downloads"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_forward"
            app:drawableStartCompat="@drawable/ic_downloads" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space24x"
        android:layout_marginTop="@dimen/space8x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/space8x"
        app:cardCornerRadius="@dimen/space8x"
        app:layout_constraintTop_toBottomOf="@id/card_profile_downloads">

        <TextView
            android:id="@+id/text_profile_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/space8x"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/space8x"
            android:paddingEnd="@dimen/space8x"
            android:text="@string/history"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_forward"
            app:drawableStartCompat="@drawable/ic_downloads" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_profile_sign_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space24x"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/card_profile_history"
        app:layout_constraintStart_toStartOf="@+id/card_profile_history"
        app:layout_constraintTop_toBottomOf="@+id/card_profile_history" />

</androidx.constraintlayout.widget.ConstraintLayout>




